--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ urlimg: "/pibookgr/images/"
 
 
 # Logo size is 600x80 pixels
-logo: "logo.png"
+logo: "/pibookgr/logo.png"
 
 
 # Paginates all X entries
@@ -87,7 +87,7 @@ paginate: 5
 
 
 # Pagination path › Important for blog page in /blog/ to work
-paginate_path: "blog/page:num"
+paginate_path: "/pibookgr/blog/page:num"
 
 
 # Theme works best with Kramdown (using the table of contents function)
